--- a/drk-cli/Cargo.toml
+++ b/drk-cli/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 drk-core = { path = "../drk-core" }
+drk-api = { path = "../drk-api" }
 drk-basic = { path = "../plugins/drk-basic" } # Built-in dependency
 clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
