--- a/plugins/drk-nix/Cargo.toml
+++ b/plugins/drk-nix/Cargo.toml
@@ -9,3 +9,6 @@ crate-type = ["cdylib"] # Important: This makes it a compiled dynamic library
 [dependencies]
 drk-api = { path = "../../drk-api" }
 anyhow = "1.0"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
